<resources>
    <string name="app_name">LOVEas5</string>
    <string name="firstname">firstName</string>
    <string name="secondname">secondName</string>
    <string name="add">Add</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start">start</string>
    <string name="desc">desc</string>
    <string name="title">title</string>
</resources>